Fix some issues with navbar not collapsing right and fix some pep8 warnings

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -16,14 +16,13 @@ body {
     display: inline-block;
     padding-top: .3125rem;
     padding-bottom: .3125rem;
-    margin-right: 1rem;
-    font-size: 5rem;
+    font-size: 3.2rem;
     line-height: inherit;
     white-space: nowrap;
     color: #79113f;
 }
 a {
-    font-size: 3rem;
+    font-size: 2.4rem;
     color: #79113f;
 }
 a:hover {
@@ -51,25 +50,6 @@ a:hover {
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-}
-#dropdown-menu {
-    position: absolute;
-    top: 100%;
-    left: 0;
-    z-index: 1000;
-    display: none;
-    float: left;
-    min-width: 10rem;
-    padding: .5rem 0;
-    margin: .125rem 0 0;
-    font-size: 1rem;
-    color: #79113F;
-    text-align: left;
-    list-style: none;
-    background-color: transparent;
-    background-clip: padding-box;
-    border: 1px solid rgba(0,0,0,.15);
-    border-radius: .25rem;
 }
 
 #mc_embed_signup .button {
